# lunisolar-calendar

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md
.changes/: 20260225_bazi_accuracy_workflow.md  20260226_bazi_theory_unification.md  20260226_terminology_projections_refactor.md  20260228_bazi_constants_dedup.md  20260228_bazi_modular_refactor.md  20260228_lunisolar_huangdao_modular_refactor.md  20260301_bazi_logic_fixes_ziping.md  20260301_bazi_structure_interactions_improvement.md
.contexts/: 0002_bazi_completeness_evaluation.md  0003_bazi_glossary_recommendations.md  0004_taixuan_shu_nayin.md
.plans/: plan_bazi_modular_refactor.md  plan_bazi_modular_refactor_logic_fixes.md  plan_bazi_structure_interactions_improvement.md
.specs/: rust-swisseph-evaluation.md  timezone.md
@specs/: bazi-analysis-framework.md  bazi-target-data-schema.md  rust-swisseph-evaluation.md  wasm.md
changes/: 20260225_bazi_accuracy_workflow.md  20260225_bazi_enhanced_report.md  20260226_hurt_officer_fix.md  20260226_terminology_projections_refactor.md  20260227_bazi_theory_corrections.md
contexts/: 0001_review_bazi_python.md  0002_bazi_completeness_evaluation.md
docs/: architecture.md
lunisolar-py/: config.py  (+5 more)
wasm/libswe-bench/: Cargo.toml  build.rs
wasm/libswe-bench/src/: lib.rs  stub.c
wasm/libswe-bench/wasm-includes/: ctype.h
wasm/libswe-bench/wasm-includes/sys/: stat.h
wasm/lunisolar/: Cargo.toml
wasm/lunisolar/src/: lib.rs
wasm/swisseph/: Cargo.toml  build.rs
wasm/swisseph/src/: lib.rs
wasm/swisseph/src/wrapper/: stub.c
wasm/swisseph/wasm-includes/: stdlib.h  string.h  unistd.h
(+126 files in other folders)
