[package]
name = "libswe-bench"
version = "0.1.0"
edition = "2021"
description = "Minimal WASM benchmark wrapper around libswe-sys"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
libswe-sys = "0.2"
wasm-bindgen = "0.2"
js-sys = "0.3"
libm = "0.2"

[build-dependencies]
cc = "1"

[profile.release]
opt-level = 2
lto = false
