[package]
name = "lunisolar-wasm"
version = "0.1.0"
edition = "2021"
description = "Lunisolar calendar conversion compiled to WebAssembly"
license = "MIT"
repository = "https://github.com/huydhoang/lunisolar-ts"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
