[package]
name = "swisseph-wasm"
version = "0.1.0"
edition = "2021"
description = "Swiss Ephemeris WASM bindings (vendored C source from aloistr/swisseph v2.10.03)"
license = "AGPL-3.0-or-later"
repository = "https://github.com/huydhoang/lunisolar-ts"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
libm = "0.2"

[build-dependencies]
cc = "1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
